# S2DL

./: Example use.ipynb  README.md  pyproject.toml  requirements.txt  setup.py
s2dl/: __init__.py  s2dl.py
